--- a/comments-service/src/main/resources/application.yml
+++ b/comments-service/src/main/resources/application.yml
@@ -1,1 +1,8 @@
-
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/comment
+    username: comment-manager
+    password: comment-manager
+server:
+  port: 80
