refactor: init.sql

--- a/comments-service/docker-compose.yml
+++ b/comments-service/docker-compose.yml
@@ -1,6 +1,7 @@
 # APP_ROOT/docker-compose.yml
-#         /db/init.sql
-#         /db/db.Dockerfile
+#         /docker/db/ddl/init.sql
+#         /docker/db/db.Dockerfile
+#         /docker/app/app.Dockerfile
 version: '3.4'
 
 services:
