refactor: app.Dockerfile, docker-compose.yml

--- a/comments-service/docker-compose.yml
+++ b/comments-service/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - web_db
   app:
     build:
-      context: docker/app
+      context: docker/db
       dockerfile: app.Dockerfile
     restart: unless-stopped
     ports:
