--- a/comments-service/src/main/resources/application.yml
+++ b/comments-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://192.168.1.100:5432/comment?ApplicationName=comments-service
+    url: jdbc:postgresql://web_db:5432/comment?ApplicationName=comments-service
     username: comment-manager
     password: comment-manager
     hikari:
