refactor: docker-compose.yml, init.sql

--- a/comments-service/docker-compose.yml
+++ b/comments-service/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   web_db:
     build:
-      context: docker/db
+      context: ./docker/db
       dockerfile: db.Dockerfile
     restart: unless-stopped
     environment:
