--- a/comments-service/.gitignore
+++ b/comments-service/.gitignore
@@ -55,6 +55,9 @@ replay_pid*
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# Maven
+.mvn
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
