--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -11,9 +11,9 @@
 	</parent>
 
 	<groupId>by.it-academy.jd2</groupId>
-	<artifactId>user_service</artifactId>
+	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>user_service</name>
+	<name>user-service</name>
 
 	<description>User Service for Task Manager project</description>
 
