--- a/audit-service/pom.xml
+++ b/audit-service/pom.xml
@@ -108,6 +108,12 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>by.it-academy.jd2</groupId>
+			<artifactId>base-package</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
