--- a/task-service/pom.xml
+++ b/task-service/pom.xml
@@ -106,7 +106,13 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>by.it-academy.jd2</groupId>
+            <artifactId>base-package</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
