--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,12 @@
 #         user-service/docker/db/ddl/init.sql
 #         user-service/docker/db/db.Dockerfile
 #         user-service/docker/app/app.Dockerfile
+#         audit-service/docker/db/ddl/init.sql
+#         audit-service/docker/db/db.Dockerfile
+#         audit-service/docker/app/app.Dockerfile
+#         task-service/docker/db/ddl/init.sql
+#         task-service/docker/db/db.Dockerfile
+#         task-service/docker/app/app.Dockerfile
 version: '3.5'
 
 services:
@@ -59,6 +65,24 @@ services:
     restart: unless-stopped
     ports:
       - "5000:80"
+    networks:
+      - taskmanager_ntwrk
+
+  audit_service_app:
+    build:
+      dockerfile: audit-service/docker/app/app.Dockerfile
+    restart: unless-stopped
+    ports:
+      - "5000:81"
+    networks:
+      - taskmanager_ntwrk
+
+  task_service_app:
+    build:
+      dockerfile: task-service/docker/app/app.Dockerfile
+    restart: unless-stopped
+    ports:
+      - "5000:82"
     networks:
       - taskmanager_ntwrk
 
