--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,6 @@ version: '3.5'
 
 services:
 
-  user_service_db:
-    build:
-      context: ./user-service/docker/db
-      dockerfile: db.Dockerfile
-    restart: unless-stopped
-    environment:
-      POSTGRES_USER: manager
-      POSTGRES_PASSWORD: manager
-    networks:
-      - taskmanager_ntwrk
-
   audit_service_db:
     build:
       context: ./audit-service/docker/db
@@ -45,17 +34,26 @@ services:
     networks:
       - taskmanager_ntwrk
 
-  pg_db:
-    image: dpage/pgadmin4:7.5
-    container_name: pgadmin
+  user_service_db:
+    build:
+      context: ./user-service/docker/db
+      dockerfile: db.Dockerfile
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: manager
+      POSTGRES_PASSWORD: manager
+    networks:
+      - taskmanager_ntwrk
+
+  pgadmin:
+    build: pgadmin
+    image: taskmanager_pgadmin:1.0.0
     restart: unless-stopped
     environment:
       PGADMIN_DEFAULT_EMAIL: manager@gmail.com
       PGADMIN_DEFAULT_PASSWORD: manager
-    volumes:
-      - ./user-service/var/pgdata:/var/lib/postgresql/data
     ports:
-      - "5001:80"
+      - "82:80"
     networks:
       - taskmanager_ntwrk
 
@@ -83,6 +81,14 @@ services:
     restart: unless-stopped
     ports:
       - "5000:82"
+    networks:
+      - taskmanager_ntwrk
+
+  swagger-ui:
+    build: swagger-ui
+    image: taskmanager_swagger-ui:1.0.0
+    ports:
+      - "81:8080"
     networks:
       - taskmanager_ntwrk
 
