--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,14 @@ services:
     networks:
       - taskmanager_ntwrk
 
+  proxy:
+    build: proxy
+    image: taskmanager_proxy:1.0.0
+    ports:
+      - "80:80"
+    networks:
+      - taskmanager_ntwrk
+
 networks:
   taskmanager_ntwrk:
     name: taskmanager_ntwrk
