--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -118,5 +118,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>${project.name}</finalName>
 	</build>
 </project>
