--- a/task-service/pom.xml
+++ b/task-service/pom.xml
@@ -106,10 +106,11 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
+
         <dependency>
-            <groupId>by.it-academy.jd2</groupId>
+            <groupId>by.itacademy.jd2</groupId>
             <artifactId>base-package</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
