--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -109,7 +109,13 @@
 			<version>1.18.28</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>by.itacademy.jd2</groupId>
+            <artifactId>base-package</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
