--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,17 @@ services:
     networks:
       - taskmanager_ntwrk
 
+  eureka-naming-service:
+    build: eureka-naming-service
+    image: eureka-naming-service:1.0.15
+    ports:
+      - "84:8080"
+    environment:
+      SERVER_PORT: 8080
+
+    networks:
+      - taskmanager_ntwrk
+
   swagger-ui:
     build: swagger-ui
     image: taskmanager_swagger-ui:1.0.0
