--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,11 +61,11 @@ services:
       - taskmanager_ntwrk
 
   task-service:
-    build:
-      dockerfile: task-service/docker/app/app.Dockerfile
+    build: task-service
     depends_on:
       - task_service_db
       - audit-service
+    image: taskmanager_task-service:1.0.0
     restart: unless-stopped
     networks:
       - taskmanager_ntwrk
