--- a/proxy/nginx-config/nginx-custom.conf
+++ b/proxy/nginx-config/nginx-custom.conf
@@ -31,4 +31,13 @@ server {
 
                 proxy_pass http://task-service:8080/task;
             }
+
+    location /api/v1/project {
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+
+                    proxy_pass http://task-service:8080/project;
+                }
 }
