--- a/task-service/pom.xml
+++ b/task-service/pom.xml
@@ -59,7 +59,13 @@
 			<artifactId>snakeyaml</artifactId>
 			<version>2.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>by.itacademy.jd2</groupId>
+            <artifactId>base-package</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
